syntax = "proto3";

option go_package = "./transaction";

message Transaction {
    string transaction_id = 1;
    int64 store_id = 2;
    int32 payment_method = 3;
    int64 voucher_id = 4;
    int64 user_id = 5;
    double original_amount = 6;
    double discount_applied = 7;
    double final_amount = 8;
    string created_at = 9; // ISO 8601 format
}

message TransactionBatch {
    int32 task_type = 1;
    repeated Transaction transactions = 2;
}

